# boxmonitor

./: Cargo.toml  README.md
src/: config.rs  main.rs  monitor.rs  ui.rs  ui_failure_charts.rs
